# docs/swagger.json
@@ -1,17 +1,30 @@
 {
   "openapi": "3.1.0",
   "info": {
-    "version": "1.1.0",
-    "title": "<Contacts API>",
+    "version": "1.0.0",
+    "title": "Contacts app",
     "license": {
-      "name": "ApiTestLaptur 2.0",
+      "name": "Apache 2.0",
       "url": "<http://www.apache.org/licenses/LICENSE-2.0.html>"
     },
-    "description": "<опис вашого додатку>"
+    "description": "This is a documentation of  app\n"
   },
   "servers": [
     {
-      "url": "http://localhost:3000"
+      "url": "http://localhost:5050"
+    },
+    {
+      "url": "https://example.com/api/v1"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Contacts",
+      "description": "Operations about users."
+    },
+    {
+      "name": "Auth",
+      "description": "Auth operations."
     }
   ],
   "paths": {
